fix(css): remove floating from infobox images
Unset the float property for images within the infobox with the class 'mw-default-size'. This resolves layout issues where images were not aligning correctly in certain contexts. Ensures more consistent and expected rendering of infobox content.

--- a/src/wikimore/static/css/style.css
+++ b/src/wikimore/static/css/style.css
@@ -487,6 +487,10 @@ section>.category-link::after {
     clear: right;
 }
 
+.infobox .mw-default-size {
+    float: unset;
+}
+
 .infobox-title {
     background-color: #1e90ff;
     color: white;
